HOTFIX: create post input overflow error fixed

--- a/learnify/web/src/pages/style.css
+++ b/learnify/web/src/pages/style.css
@@ -629,7 +629,7 @@ h1 {
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
-    height: 40px;
+    height: 40%;
     padding:8px;
     background-color: #FFF7E9;
     border-radius: 10px;
